--- a/assets/map/map.html
+++ b/assets/map/map.html
@@ -1,7 +1,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=여기에_Javascript_키_입력"></script>
+    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=127153ab0c58ca5f0b8f8002406b336f"></script>
 </head>
 <body>
     <div id="map" style="width:100%;height:100vh;"></div>
